--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,6 +1,6 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
-    secret: '%env(APP_SECRET)%'
+    secret: '%env(dad3474592c5d582b7bc4a4c1da96ad1)%'
     #csrf_protection: true
     #http_method_override: true
 
