--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=dad3474592c5d582b7bc4a4c1da96ad1
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://b4c25a73510130:5200c2b5@us-cdbr-east-02.cleardb.com/heroku_270f9eccada4f94?reconnect=true
+DATABASE_URL=mysql://adffdadf2341:adf4234@us-cdbr-east.cleardb.com/heroku_db?reconnect=true
 ###< doctrine/doctrine-bundle ###
