--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
-        "symfony/dotenv require-dev": "5.1.*",
         "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
@@ -44,6 +43,7 @@
         "symfony/css-selector": "^5.1",
         "symfony/debug-bundle": "^5.1",
         "symfony/maker-bundle": "^1.0",
+        "symfony/dotenv": "5.1.*",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/stopwatch": "^5.1",
         "symfony/var-dumper": "^5.1",
